--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link href="css/upgoaled.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+	    <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
@@ -26,7 +26,6 @@
       <form method="post" data-wf-user-form-type="signup">
         <div class="w-users-userformheader">
         </div>
-        <!-- Google Sign-In button -->
         <div id="g_id_onload"
              data-client_id="72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com"
              data-callback="handleCredentialResponse"
@@ -34,7 +33,6 @@
              data-auto_prompt="false">
         </div>
         <div class="g_id_signin" data-type="standard"></div>
-        <!-- other form fields -->
       </form>
     </div>
   </div>
@@ -59,7 +57,7 @@
         });
       });
     }
-  </script>><!-- Using Threejs & Jerome Etienne's Threex -->
+  </script>
 <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
 <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/examples/js/SimplexNoise.js'></script>
 <script src='https://jeromeetienne.github.io/threex.terrain/threex.terrain.js'></script>
