--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <!--  This site was created in Webflow. https://www.webflow.com  -->
 <!--  Last Published: Wed May 03 2023 23:03:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="643ed89902af162c31a34f91" data-wf-site="64382ef9047a21f54d6848f4">
-<head>
+<head> <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/upgoaled.webflow.css">
+  <link rel="stylesheet" type="text/css" href="styles/webflow.css">
+
   <meta charset="utf-8">
   <title>Upgoaled</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
