--- a/public/index.html
+++ b/public/index.html
@@ -15,48 +15,21 @@
   <link href="css/upgoaled.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-	    <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script src="loadLibraries.js" type="application/javascript"></script> <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        
-        #login {
-            display: block;
-            margin: 0 auto;
-            padding: 10px 20px;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+  <script src="loadLibraries.js" type="application/javascript"></script> 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googlefs.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="card">
         <div id="g_id_onload"
             data-client_id="72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com"
             data-callback="handleCredentialResponse">
         </div>
         <button id="login">Log in with Google</button>
-    </div>
 
     <script>
         function handleCredentialResponse(response) {
@@ -109,15 +82,13 @@
 <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/examples/js/SimplexNoise.js'></script>
 <script src='https://jeromeetienne.github.io/threex.terrain/threex.terrain.js'></script>
 <script> var renderer	= new THREE.WebGLRenderer({
-		antialias	: true
+		antialias: true
 	});
-/* Fullscreen */
 	renderer.setSize( window.innerWidth, window.innerHeight );
-/* Append to HTML */
 	document.body.appendChild( renderer.domElement );
 	var onRenderFcts= [];
 	var scene	= new THREE.Scene();
-	var camera	= new THREE.PerspectiveCamera(25, window.innerWidth /    window.innerHeight, 0.01, 1000);
+	var camera	= new THREE.PerspectiveCamera(25, window.innerWidth/window.innerHeight, 0.01, 1000);
 /* Play around with camera positioning */
 	camera.position.z = 15; 
   camera.position.y = 2;
@@ -166,6 +137,5 @@
 			onRenderFct(deltaMsec/1000, nowMsec/1000)
 		})
   }) </script>
-  <!-- Rest of your code here -->
 </body>
 </html>
