--- a/public/index.html
+++ b/public/index.html
@@ -24,58 +24,26 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://ajax.googlefs.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
+<body>  <script src="https://accounts.google.com/gsi/client" async defer></script>
+   
+    <div class="g_id_signin" data-type="standard"></div>
+  </body>
         <div id="g_id_onload"
             data-client_id="72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com"
-            data-callback="handleCredentialResponse">
-        </div>
+             data-ux_mode="redirect"
+         data-login_uri="https://ugoaled.vercel.app/api/login">
+    </div>
         <button id="login">Log in with Google</button>
 
     <script>
-        function handleCredentialResponse(response) {
-            const credential = response.credential;
 
-            // Send the credential to your server for verification and user session handling
-            fetch('https://ugoaled.vercel.app/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    credential: credential,
-                }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                // Handle successful login data here
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                // Handle error here
-            });
-        }
 
     document.getElementById('login').onclick = function() {
-            var client_id = '72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com';
-            var redirect_uri = 'https://Upgoaled.vercel.app';
-            var scope = 'https://www.googleapis.com/auth/fitness.activity.read%20https://www.googleapis.com/auth/fitness.activity.write%20https://www.googleapis.com/auth/fitness.blood_glucose.read%20https://www.googleapis.com/auth/fitness.blood_glucose.write%20https://www.googleapis.com/auth/fitness.blood_pressure.read%20https://www.googleapis.com/auth/fitness.blood_pressure.write%20https://www.googleapis.com/auth/fitness.body.read%20https://www.googleapis.com/auth/fitness.body.write%20https://www.googleapis.com/auth/fitness.body_temperature.read%20https://www.googleapis.com/auth/fitness.body_temperature.write%20https://www.googleapis.com/auth/fitness.location.read%20https://www.googleapis.com/auth/fitness.location.write%20https://www.googleapis.com/auth/fitness.nutrition.read%20https://www.googleapis.com/auth/fitness.nutrition.write%20https://www.googleapis.com/auth/fitness.oxygen_saturation.read%20https://www.googleapis.com/auth/fitness.oxygen_saturation.write%20https://www.googleapis.com/auth/fitness.reproductive_health.read%20https://www.googleapis.com/auth/fitness.reproductive_health.write';
-            
-            // Trigger the Google Sign-In flow
-            gapi.signin2.render('g_id_onload', {
-                'scope': scope,
-                'width': 240,
-                'height': 50,
-                'theme': 'outline',
-                'longtitle': true,
-                'onsuccess': handleCredentialResponse,
-                'onfailure': function(error) {
-                    console.error('Google Sign-In failed:', error);
-                    // Handle sign-in failure here
-                },
-                'client_id': client_id,
-                'redirect_uri': redirect_uri
-            });
+       var client_id = '72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com';
+        var redirect_uri = 'https://Upgoaled.vercel.app';
+        var scope = 'https://www.googleapis.com/auth/fitness.activity.read%20https://www.googleapis.com/auth/fitness.activity.write%20https://www.googleapis.com/auth/fitness.blood_glucose.read%20https://www.googleapis.com/auth/fitness.blood_glucose.write%20https://www.googleapis.com/auth/fitness.blood_pressure.read%20https://www.googleapis.com/auth/fitness.blood_pressure.write%20https://www.googleapis.com/auth/fitness.body.read%20https://www.googleapis.com/auth/fitness.body.write%20https://www.googleapis.com/auth/fitness.body_temperature.read%20https://www.googleapis.com/auth/fitness.body_temperature.write%20https://www.googleapis.com/auth/fitness.location.read%20https://www.googleapis.com/auth/fitness.location.write%20https://www.googleapis.com/auth/fitness.nutrition.read%20https://www.googleapis.com/auth/fitness.nutrition.write%20https://www.googleapis.com/auth/fitness.oxygen_saturation.read%20https://www.googleapis.com/auth/fitness.oxygen_saturation.write%20https://www.googleapis.com/auth/fitness.reproductive_health.read%20https://www.googleapis.com/auth/fitness.reproductive_health.write';
+        var url = `https://accounts.google.com/o/oauth2/v2/auth?scope=${scope}&response_type=code&client_id=${client_id}&redirect_uri=${redirect_uri}`;
+        window.location.href = url;
         };
     </script>
 <script src='https://jeromeetienne.github.io/threex.terrain/examples/vendor/three.js/build/three-min.js'></script>
