--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Success:', data);
+		window.location.href = url;
+
                 // Handle successful login data here
             })
             .catch((error) => {
@@ -65,7 +67,7 @@
 
     document.getElementById('login').onclick = function() {
        var client_id = '72778325262-61s06kg575qdc75sj82nuvoh5bujpfu2.apps.googleusercontent.com';
-        var redirect_uri = 'https://Upgoaled.vercel.app/login';
+        var redirect_uri = 'https://upgoaled.vercel.app/api/login';
         var scope = 'https://www.googleapis.com/auth/fitness.activity.read%20https://www.googleapis.com/auth/fitness.activity.write%20https://www.googleapis.com/auth/fitness.blood_glucose.read%20https://www.googleapis.com/auth/fitness.blood_glucose.write%20https://www.googleapis.com/auth/fitness.blood_pressure.read%20https://www.googleapis.com/auth/fitness.blood_pressure.write%20https://www.googleapis.com/auth/fitness.body.read%20https://www.googleapis.com/auth/fitness.body.write%20https://www.googleapis.com/auth/fitness.body_temperature.read%20https://www.googleapis.com/auth/fitness.body_temperature.write%20https://www.googleapis.com/auth/fitness.location.read%20https://www.googleapis.com/auth/fitness.location.write%20https://www.googleapis.com/auth/fitness.nutrition.read%20https://www.googleapis.com/auth/fitness.nutrition.write%20https://www.googleapis.com/auth/fitness.oxygen_saturation.read%20https://www.googleapis.com/auth/fitness.oxygen_saturation.write%20https://www.googleapis.com/auth/fitness.reproductive_health.read%20https://www.googleapis.com/auth/fitness.reproductive_health.write';
         var url = `https://accounts.google.com/o/oauth2/v2/auth?scope=${scope}&response_type=code&client_id=${client_id}&redirect_uri=${redirect_uri}`;
         window.location.href = url;
