--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         <button id="login">Log in with Google</button>
 
     <script>
+	 
   function handleCredentialResponse(response) {
             const credential = response.credential;
 
@@ -48,7 +49,7 @@
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    credential: credential,
+                    userId: credential,
                 }),
             })
             .then(response => response.json())
