--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             const credential = response.credential;
 
             // Send the credential to your server for verification and user session handling
-            fetch('https://ugoaled.vercel.app/api/login', {
+            fetch('https://upgoaled.vercel.app/api/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
